--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.activemq.broker-url=tcp://localhost:61616
-route.camel.error-handler.enabled=true
+route.camel.error-handler.enabled=false
+route.camel.split-handler.enabled=false
+route.camel.bean-handler.enabled=true
