--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.broker-url=tcp://localhost:61616?initialReconnectDelay=2000&maxReconnectAttempts=2
 route.camel.error-handler.enabled=false
 route.camel.split-handler.enabled=false
 route.camel.bean-handler.enabled=false
