camel light waight

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.activemq.broker-url=tcp://localhost:61616?initialReconnectDelay=2000&maxReconnectAttempts=2
-route.camel.error-handler.enabled=false
+route.camel.error-handler.enabled=true
 route.camel.split-handler.enabled=false
 route.camel.bean-handler.enabled=false
-route.camel.seda-handler.enabled=false
+route.camel.seda-handler.enabled=true
 route.camel.sender-handler.enabled=false
+camel.springboot.lightweight=true
