--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation('org.springframework.boot:spring-boot-starter-web') {
+		exclude group:'org.springframework.boot', module:'spring-boot-starter-tomcat'
+	}
+	implementation 'org.springframework.boot:spring-boot-starter-jetty'
 	implementation 'org.apache.camel.springboot:camel-spring-boot-starter:3.20.6'
 	implementation 'org.apache.camel.springboot:camel-activemq-starter:3.20.6'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
