--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.camel.service'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '11'
+	sourceCompatibility = '17'
 }
 
 repositories {
@@ -22,6 +22,7 @@ dependencies {
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-jetty'
 	implementation 'org.apache.camel.springboot:camel-spring-boot-starter:3.20.6'
+	implementation 'org.apache.camel.springboot:camel-saga-starter:3.20.6'
 	implementation 'org.apache.camel.springboot:camel-activemq-starter:3.20.6'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
